apps/media/bazarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bazarr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bazarr
  template:
    metadata:
      labels:
        app: bazarr
    spec:
      containers:
      - name: bazarr
        image: lscr.io/linuxserver/bazarr:v1.5.1-ls300
        ports:
        - containerPort: 6767
        volumeMounts:
        - name: media
          mountPath: /data
        - name: config
          mountPath: /config
      volumes:
      - name: media
        hostPath:
          path: /mnt/data
          type: Directory
      - name: config
        hostPath:
          path: /mnt/data/configs/bazarr
          type: Directory
